--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Museums</h1>
 
 <% @museums.each do |museum| %>
-<%= museum.name %><br>
+<%= link_to museum.name, "#{museum.id}" %><br>
 <% end %>
