--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -1,14 +1,4 @@
 <h1><%= @museum.name %></h1>
 
-<ul>
-  <li>Free Admission?: 
-  <%= @museum.free_admission %></li>
-  <li>Donation Revenue:
-  $<%= @museum.donation_revenue %></li>
-<!--  <li>Created at:
-  <%= @museum.created_at %></li>
-  <li>Updated at:
-  <%= @museum.updated_at %></li>
-  <li>Museum id:
-  <%= @museum.id %></li> -->
-</ul>
+<p><b>Free Admission?: </b><%= @museum.free_admission %></p>
+  <p><b>Donation Revenue: </b>$<%= @museum.donation_revenue %></p>
