--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,3 +5,5 @@
 <br>
 <h3><%= link_to 'Museums', "/museums/#index" %></h3>
 <h3><%= link_to 'Compositions', "/compositions/#index" %></h3>
+<h3><%= link_to 'Gyms', "/gyms/#index" %></h3>
+<h3><%= link_to 'Classes', "/classes/#index" %></h3>
