Add composition count to museum show

--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -2,3 +2,4 @@
 
 <p><b>Free Admission?: </b><%= @museum.free_admission %></p>
 <p><b>Donation Revenue: </b>$<%= @museum.donation_revenue %></p>
+<p><b>Compositions: </b><%= @museum.count %></p>
