--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -3,3 +3,4 @@
 <p><b>Free Admission?: </b><%= @museum.free_admission %></p>
 <p><b>Donation Revenue: </b>$<%= @museum.donation_revenue %></p>
 <p><b>Compositions: </b><%= @museum.count %></p>
+<p><%= link_to 'Museum Compositions', "/museums/#{@museum.id}/compositions" %></p>
