--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,4 +6,4 @@
 <h3><%= link_to 'Museums', "/museums/#index" %></h3>
 <h3><%= link_to 'Compositions', "/compositions/#index" %></h3>
 <h3><%= link_to 'Gyms', "/gyms/#index" %></h3>
-<h3><%= link_to 'Classes', "/classes/#index" %></h3>
+<h3><%= link_to 'Activities', "/activities/#index" %></h3>
