--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Museums</h1>
 
 <% @museums.each do |museum| %>
-<%= link_to museum.name, "#{museum.id}" %>
+<%= link_to museum.name, "museums/#{museum.id}" %>
 Created at: <%= museum.created_at %><br>
 <% end %>
+<%= link_to 'New Museum', '/museums/new' %>
