test user story 3

--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -3,3 +3,7 @@
 <% @gyms.each do |gym| %>
   <%= gym.name %><br>
 <% end %>
+
+<% @activities.each do |activity| %>
+  <%= activity.name %><br>
+<% end %>
