--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -2,3 +2,10 @@
 <p><b>Location: <%= @gyms.location %></p>
 <p><b>open: <%= @gyms.open %></p>
 <p><b>Rank: <%= @gyms.rank %></p>
+
+<h1><%= @activities.name %></h1>
+<p><b>Day: <%= @activities.day %></p>
+<p><b>Time: <%= @activities.time %></p>
+<p><b>Maximum Capacity: <%= @activities.max_number %></p>
+<p><b>Drop In: <%= @activities.drop_in %></p>
+<p><b>Gym ID: <%= @activities.gym_id %></p>
