--- a/app/views/compositions/show.html.erb
+++ b/app/views/compositions/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @composition.name %></h1>
 
-<p><b>Artist:</b> <%= @composition.artist %></p>
-<p><b>On Display?: </b><%= @composition.on_display %></p>
-<p><b>Year Made: </b><%= @composition.year_made %></p>
+<p>
+  <b>Artist:</b>
+  <%= @composition.artist %></p>
+<p>
+  <b>On Display?:
+  </b><%= @composition.on_display %></p>
+<p>
+  <b>Year Made:
+  </b><%= @composition.year_made %></p>
