--- a/app/views/museum_compositions/index.html.erb
+++ b/app/views/museum_compositions/index.html.erb
@@ -1,8 +1,16 @@
 <h1><%= @museum.name %></h1>
 <% @compositions.each do |composition| %>
-<p><b>Artist:</b> <%= composition.name %></p>
-<p><b>Artist:</b> <%= composition.artist %></p>
-<p><b>On Display?: </b><%= composition.on_display %></p>
-<p><b>Year Made: </b><%= composition.year_made %></p>
-<br>
+  <p>
+    <b>Artist:</b>
+    <%= composition.name %></p>
+  <p>
+    <b>Artist:</b>
+    <%= composition.artist %></p>
+  <p>
+    <b>On Display?:
+    </b><%= composition.on_display %></p>
+  <p>
+    <b>Year Made:
+    </b><%= composition.year_made %></p>
+  <br>
 <% end %>
