user stories 5 and 6

--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @gyms.name %></h1>
-<p><b>Location: <%= @gyms.location %></p>
-<p><b>open: <%= @gyms.open %></p>
-<p><b>Rank: <%= @gyms.rank %></p>
+<h1><%= @gym.name %></h1>
+<p><b>Location: <%= @gym.location %></p>
+<p><b>open: <%= @gym.open %></p>
+<p><b>Rank: <%= @gym.rank %></p>
+<p><b>Number of Activities: <%= @activity_count %></p>
