--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -4,4 +4,4 @@
 <p><b>Rank: <%= @gym.rank %></p>
 <p><b>Number of Activities: <%= @activity_count %></p>
 <br>
-<p><%= link_to 'Activities', "/gyms/#{@gym.id}/activities" %></p>
+<p><%= link_to 'Gym Activities', "/gyms/#{@gym.id}/activities" %></p>
