--- a/app/views/museum_compositions/index.html.erb
+++ b/app/views/museum_compositions/index.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @museum.name %></h1>
 <% @compositions.each do |composition| %>
   <p>
-    <b>Artist:</b>
+    <b>Piece:</b>
     <%= composition.name %></p>
   <p>
     <b>Artist:</b>
