--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -10,4 +10,4 @@
   <b>Compositions:
   </b><%= @museum.count %></p>
 <p><%= link_to 'Museum Compositions', "/museums/#{@museum.id}/compositions" %></p>
-<p><%= link_to 'Edit Museum', "/museums/#{@museum.id}/edit" %></p>
+<p><%= link_to 'Update Museum', "/museums/#{@museum.id}/edit" %></p>
