--- a/app/views/museum_compositions/index.html.erb
+++ b/app/views/museum_compositions/index.html.erb
@@ -14,3 +14,5 @@
     </b><%= composition.year_made %></p>
   <br>
 <% end %>
+
+<%= link_to 'New Composition', "/museums/#{@museum.id}/compositions/new" %>
