Change wording from edit to update

--- a/app/views/museums/edit.html.erb
+++ b/app/views/museums/edit.html.erb
@@ -7,5 +7,5 @@
 <%= form.check_box :free_admission %><br>
 <%= form.label :donation_revenue %>
 <%= form.number_field :donation_revenue %><br>
-<%= form.submit 'Edit Museum' %>
+<%= form.submit 'Update Museum' %>
 <% end %>
