Add composition update functionality

--- a/app/views/compositions/show.html.erb
+++ b/app/views/compositions/show.html.erb
@@ -9,3 +9,5 @@
 <p>
   <b>Year Made:
   </b><%= @composition.year_made %></p>
+<p>
+  <%= link_to 'Update Composition', "/compositions/#{@composition.id}/edit" %></p>
