Add update links to museum index page

--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -2,7 +2,12 @@
 
 <% @museums.each do |museum| %>
   <%= link_to museum.name, "/museums/#{museum.id}" %>
+  <br>
   Created at:
-  <%= museum.created_at %><br>
+  <%= museum.created_at %>
+  <br>
+  <%= link_to "Update #{museum.name}", "/museums/#{museum.id}/edit" %>
+  <br>
+  <br>
 <% end %>
 <%= link_to 'New Museum', '/museums/new' %>
