Add delete functionality to museum and composition show pages

--- a/app/views/compositions/show.html.erb
+++ b/app/views/compositions/show.html.erb
@@ -11,3 +11,5 @@
   </b><%= @composition.year_made %></p>
 <p>
   <%= link_to 'Update Composition', "/compositions/#{@composition.id}/edit" %></p>
+  <p>
+    <%= link_to 'Delete Composition', "/compositions/#{@composition.id}", method: :delete %></p>
