--- a/app/views/museums/show.html.erb
+++ b/app/views/museums/show.html.erb
@@ -9,5 +9,9 @@
 <p>
   <b>Compositions:
   </b><%= @museum.count %></p>
-<p><%= link_to 'Museum Compositions', "/museums/#{@museum.id}/compositions" %></p>
-<p><%= link_to 'Update Museum', "/museums/#{@museum.id}/edit" %></p>
+<p>
+  <%= link_to 'Museum Compositions', "/museums/#{@museum.id}/compositions" %></p>
+<p>
+  <%= link_to 'Update Museum', "/museums/#{@museum.id}/edit" %></p>
+<p>
+  <%= link_to 'Delete Museum', "/museums/#{@museum.id}", method: :delete %></p>
