--- a/app/views/museum_compositions/index.html.erb
+++ b/app/views/museum_compositions/index.html.erb
@@ -13,6 +13,8 @@
     <b>Year Made:
     </b><%= composition.year_made %></p>
   <p>
+    <%= link_to 'Update Composition', "/compositions/#{composition.id}/edit" %></p>
+  <p>
   <%= link_to 'Delete Composition', "/compositions/#{composition.id}", method: :delete %></p>
   <br>
 <% end %>
