Add delete functionality to museum and composition index pages

--- a/app/views/museums/index.html.erb
+++ b/app/views/museums/index.html.erb
@@ -8,6 +8,8 @@
   <br>
   <%= link_to "Update #{museum.name}", "/museums/#{museum.id}/edit" %>
   <br>
+  <%= link_to "Delete #{museum.name}", "/museums/#{museum.id}", method: :delete %>
+  <br>
   <br>
 <% end %>
 <%= link_to 'New Museum', '/museums/new' %>
