--- a/app/views/compositions/index.html.erb
+++ b/app/views/compositions/index.html.erb
@@ -12,6 +12,8 @@
       <%= composition.year_made %></li>
     <%= link_to "Update #{composition.name}", "/compositions/#{composition.id}/edit" %>
     <br>
+    <%= link_to "Delete #{composition.name}", "/compositions/#{composition.id}", method: :delete %>
+    <br>
     <br>
   <% end %>
   <% end %>
