--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -5,3 +5,4 @@
 <p><b>Number of Activities: <%= @activity_count %></p>
 <br>
 <p><%= link_to 'Gym Activities', "/gyms/#{@gym.id}/activities" %></p>
+<p><%= link_to 'Update Gym', "/gyms/#{@gym.id}/edit" %></p>
