--- a/app/views/gym_activities/index.html.erb
+++ b/app/views/gym_activities/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @gym.name %></h1>
 <% @activities.each do |activity| %>
-
+<p><b>Name: </b> <%= activity.name %></p>
 <p><b>Day: </b> <%= activity.day %></p>
 <p><b>Time: </b><%= activity.time %></p>
 <p><b>Maximum Number: </b><%= activity.max_number %></p>
@@ -8,3 +8,5 @@
 <p><b>Gym ID: </b><%= activity.gym_id %></p>
 <br>
 <% end %>
+
+<%= link_to 'New Activity', "/gyms/#{@gym.id}/activities/new" %>
