--- a/app/views/gym_activities/index.html.erb
+++ b/app/views/gym_activities/index.html.erb
@@ -6,7 +6,8 @@
 <p><b>Maximum Number: </b><%= activity.max_number %></p>
 <p><b>Drop-In: </b><%= activity.drop_in %></p>
 <p><b>Gym ID: </b><%= activity.gym_id %></p>
-<br>
+<p><%= link_to 'Show Activity', "/activities/#{activity.id}" %></p>
+
 <% end %>
 
 <%= link_to 'New Activity', "/gyms/#{@gym.id}/activities/new" %>
