--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -1,8 +1,13 @@
 <h1>Gyms</h1>
 
 <% @gyms.each do |gym| %>
-  <p><b><%= link_to gym.name, "/gyms/#{gym.id}" %><br>
-    
+<h2><b><%= link_to gym.name, "/gyms/#{gym.id}" %></h2>
+
+<%= link_to "Edit #{gym.name}", "/gyms/#{gym.id}/edit" %>
+<br>
+<%= link_to "Delete #{gym.name}", "/gyms/#{gym.id}", method: :delete %>
+<br>
 <% end %>
+<br>
 <br>
 <%= link_to 'New Gym', '/gyms/new' %>
