--- a/app/views/gym_activities/index.html.erb
+++ b/app/views/gym_activities/index.html.erb
@@ -7,6 +7,8 @@
 <p><b>Drop-In: </b><%= activity.drop_in %></p>
 <p><b>Gym ID: </b><%= activity.gym_id %></p>
 <p><%= link_to 'Show Activity', "/activities/#{activity.id}" %></p>
+<p><%= link_to "Delete #{activity.name}", "/activities/#{activity.id}", method: :delete %>
+
 
 <% end %>
 <%= link_to 'Alphabetize Activities', "/gyms/#{@gym.id}/activities?sort=alph" %>
